[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "prompt>=0.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["brain_games"]

[dependency-groups]
dev = [
    "ruff>=0.14.10",
]

[project.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:brain_even"
brain-calc = "brain_games.scripts.brain_even:brain_calc"
brain-gcd = "brain_games.scripts.brain_even:brain_gcd"
brain-prime = "brain_games.scripts.brain_even:brain_prime"
brain-progression = "brain_games.scripts.brain_even:brain_progression"